# OOOP_Course

./: .gitignore  CMakeLists.txt
vika_s_lab1/: CMakeLists.txt  box.cpp  box.h  main.cpp  menu.cpp
vika_s_lab2/: CMakeLists.txt  Money.cpp  Money.h  main.cpp
vika_s_lab3/: CMakeLists.txt  diagram.puml  main.cpp  menu.cpp  menu.h  text.txt  train.cpp  transport.cpp  transport.h
vika_s_lab4/: CMakeLists.txt  menu.cpp  menu.h  task.txt  worker.cpp  worker.h
vika_s_lab5/: Body.h  CMakeLists.txt  Car.cpp  Car.h  Engine.cpp  Engine.h  Menu.cpp  Menu.h  main.cpp
vika_s_lab5/vika's_lab4/: CMakeLists.txt
vika_s_lab5/vika's_lab5/: Body.cpp  CMakeLists.txt  DumpTruck.cpp  DumpTruck.h  Truck.cpp  Truck.h  diagram.puml
vika_s_lab6/: CMakeLists.txt  answer.cpp  answer.h  diagram.puml  iquestion.cpp  iquestion.h  main.cpp  menu.cpp  question.cpp  question.h  result.cpp  result.h  task.txt  test.cpp  test.h  user.cpp  user.h  utils.cpp  utils.h
vika_s_lab7/: CMakeLists.txt  answer.cpp  answer.h  diagram.puml  main.cpp  menu.cpp  question.cpp  question.h  result.cpp  result.h  test.cpp  test.h  transaction.cpp  transaction.h  user.cpp  user.h  utils.cpp  utils.h
vika_s_lab8/: CMakeLists.txt  Conductor.cpp  Conductor.h  EXCEPTIONS_EXPLANATION.md  Employee.cpp  Employee.h  Engineer.cpp  Engineer.h  MANUAL_INPUT_TESTING.md  MANUAL_TESTING_REQUIREMENTS.md  StaffManager.cpp  StaffManager.h  TESTING_GUIDE.md  Train.cpp  Train.h  TrainCar.cpp  TrainCar.h  Trip.cpp  Trip.h  class_diagram.puml  class_diagram.txt  main.cpp
